--- a/p8105_hw1_hl3439.Rmd
+++ b/p8105_hw1_hl3439.Rmd
@@ -64,5 +64,9 @@ data("penguins", package = "palmerpenguins")
 summary(penguins)
 ```
 
-There are several variables in the penguins dataset that includes `r ls(penguins)`.
-Among those variables, bill_length_mm has range ( `r range(penguins$bill_length_mm, na.rm=TRUE)` ), bill_depth_mm has range ( `r range(penguins$bill_depth_mm, na.rm=TRUE)` ), flipper_length_mm has range ( `r range(penguins$flipper_length_mm, na.rm=TRUE)` ), year has range ( `r range(penguins$year, na.rm=TRUE)` ), body_mass_g has range ( `r range(penguins$body_mass_g, na.rm=TRUE)` ), sex has levels `r levels(penguins$sex)`, species has levels `r levels(penguins$species)`, and island has levels `r levels(penguins$island)`.
+* There are several variables in the penguins dataset that includes `r ls(penguins)`.
+Among those variables, bill_length_mm has range ( `r range(penguins$bill_length_mm, na.rm = TRUE)` ), bill_depth_mm has range ( `r range(penguins$bill_depth_mm, na.rm = TRUE)` ), flipper_length_mm has range ( `r range(penguins$flipper_length_mm, na.rm = TRUE)` ), year has range ( `r range(penguins$year, na.rm = TRUE)` ), body_mass_g has range ( `r range(penguins$body_mass_g, na.rm = TRUE)` ), sex has levels `r levels(penguins$sex)`, species has levels `r levels(penguins$species)`, and island has levels `r levels(penguins$island)`.
+
+* The dataset has `r nrow(penguins)` rows and `r ncol(penguins)` columns.
+
+* The mean flipper length is `r mean(penguins$flipper_length_mm, na.rm = TRUE)`.
