--- a/p8105_hw1_hl3439.md
+++ b/p8105_hw1_hl3439.md
@@ -43,13 +43,13 @@ Take the mean of each variable in my data frame.
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] -0.17911
+    ## [1] 0.5983079
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.2
+    ## [1] 0.7
 
 ``` r
 mean(pull(prob1_df, char_vec))
@@ -86,8 +86,8 @@ to numerical values.
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.00000000 0.05794526 0.00000000 0.00000000 1.34001685 0.00000000
-    ##  [7] 0.00000000 0.00000000 0.00000000 0.00000000
+    ##  [1] 2.0141261 0.0000000 0.3415489 0.4590215 1.1482269 1.1952556 0.0000000
+    ##  [8] 1.7953447 0.0000000 0.4033287
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -102,8 +102,8 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1] -0.21778165  0.11589052 -0.09070542 -0.21789207  2.68003371 -0.20291816
-    ##  [7] -0.01896049 -1.04705506 -0.94517278 -0.44857607
+    ##  [1]  4.02825227 -0.08797488  0.68309773  0.91804299  2.29645390  2.39051110
+    ##  [7] -0.66603998  3.59068947 -0.61975818  0.80665735
 
 After factors are converted to numbers, they can do arithmetic
 operations including multiplication. However, factors are not eligible
@@ -131,7 +131,8 @@ data("penguins", package = "palmerpenguins")
 
   - The mean flipper length is 200.9152047.
 
-  - Make a scatterplot of flipper length (y) vs bill length (x).
+  - Make a scatterplot of flipper length (y) vs bill length (x) with
+    points colored in accordance with different species.
 
 <!-- end list -->
 
